--- a/PFE/nbproject/project.properties
+++ b/PFE/nbproject/project.properties
@@ -29,14 +29,14 @@ dist.jar=${dist.dir}/PFE.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.11.jar=mysql-connector-java-8.0.11.jar
+file.reference.sqlite-jdbc-3.7.2.jar=sqlite-jdbc-3.7.2.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-8.0.11.jar}
+    ${file.reference.sqlite-jdbc-3.7.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
